[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokerok"
description = ""
version = "0.0.1"
authors = [
    { name = "vasgg", email = "vas.g@me.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'fastapi>=0.111.0',
    'redis>=5.0.4',
    'pydantic-settings>=2.2.1',
    'cryptography>=42.0.7',
    'pyautogui>=0.9.54',
    'pillow>=10.3.0',
    'tzdata>=2024.1',
    'aiohttp>=3.9.5',
    'psutil>=6.0.0',
]
requires-python = ">=3.11"

[project.scripts]
bot-run = "main:run_main"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["ALL"]
ignore = ["D", "Q", "UP", "ERA001"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
filterwarnings = [
    "ignore::DeprecationWarning",
]
