[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pokerok"
description = ""
version = "0.0.1"
authors = [
    { name = "vasgg", email = "vas.g@me.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'fastapi>=0.111.0',
    'redis>=5.0.4',
    'pydantic-settings>=2.2.1',
    'cryptography>=42.0.7',
    'pyautogui>=0.9.54',
    'pillow>=10.3.0',
    'tzdata>=2024.1',
    'aiohttp>=3.9.5',
    'aiofiles>=24.1.0',
    'pynput>=1.7.7',
    'black>=24.4.2',
    'uvicorn>=0.30.5',
    'aiomysql>=0.2.0',
    'sqlalchemy>=2.0.32',
    'pygetwindow>=0.0.9',
    'requests>=2.32.3',
    'aiofiles>=24.1.0',
]
requires-python = ">=3.11"

[project.scripts]
run-server = "main:run_main"
run-worker = "worker:run_main"
run-reporter = "reporter:run_main"

[tool.black]
line-length = 119
target-version = ['py311']
skip-string-normalization = true

[tool.ruff]
line-length = 119
target-version = "py311"
select = ["ALL"]
ignore = ["Q", "T", "D", "ANN", "UP", "RUF", "G004", "RET504", "ISC002", "INP001", "EM101", "TRY003", "PTH", "TD", "FIX002"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
filterwarnings = [
    "ignore::DeprecationWarning",
]
