[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokerok"
description = ""
version = "0.0.1"
authors = [
    { name = "vasgg", email = "vas.g@me.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'redis>=5.0.4',
    'pydantic-settings>=2.2.1',
    'cryptography>=42.0.7',
    'pyautogui>=0.9.54',
    'pillow>=10.3.0',
    'tzdata>=2024.1',
    'aiohttp>=3.9.5',
    'aiofiles>=24.1.0',
    'pynput>=1.7.7',
    'uvicorn>=0.30.5',
    'aiomysql>=0.2.0',
    'sqlalchemy>=2.0.32',
    'pygetwindow>=0.0.9',
    'aiofiles>=24.1.0',
    'aiogram>=3.18.0',
]
requires-python = ">=3.11"

[project.scripts]
run-worker = "worker:run_main"
run-reporter = "reporter:run_main"
run-test = "request:run_main"

[tool.ruff]
line-length = 119
target-version = "py311"
